--- a/views/offer.erb
+++ b/views/offer.erb
@@ -93,7 +93,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Get Flying Now</h2>
-                    <p class="lead">Tell us who you are, and we'll get you your special offer:</p>
+                    <p class="lead">You qualify for 800 million, bajillion points. <a href="https://storefront-staging.lxc.points.com/dodemo/en-US/buy?referralCode=dotargeted">Click here</a> to continue to purchase your offer.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="https://iambmac.files.wordpress.com/2012/04/plane_flying.jpg" alt="">
