--- a/views/index.erb
+++ b/views/index.erb
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
+    <link href="css/style-overrides.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -94,6 +95,30 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Get Flying Now</h2>
                     <p class="lead">Tell us who you are, and we'll get you your special offer:</p>
+
+
+
+                    <form method="POST" action="offer">
+                        <div id="form-fields">
+                            <label for="mv[firstName]" class="formlabel">First Name:</label>
+                            <input type="text" name="mv[firstName]" placeholder="First Name" /><br />
+
+                            <label for="mv[lastName]" class="formlabel">First Name:</label>
+                            <input type="text" name="mv[lastName]" placeholder="Last Name" /><br />
+
+                            <label for="mv[memberId]" class="formlabel">Last Name:</label>
+                            <input type="text" name="mv[memberId]" placeholder="Member ID" /><br />
+
+                            <label for="mv[email]" class="formlabel">Email Address:</label>
+                            <input type="text" name="mv[email]" placeholder="Email" /><br />
+                        </div>
+                        <div id="form-buttons">
+                            <button type="submit" class="formbutton" name="submit">Show Me The Money</button>
+                        </div>
+                    </form>
+
+
+
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="https://iambmac.files.wordpress.com/2012/04/plane_flying.jpg" alt="">
