--- a/views/index.erb
+++ b/views/index.erb
@@ -108,10 +108,10 @@
                                 <label for="firstName" class="formlabel">First Name:</label>
                                 <input id="firstName" type="text" name="mv[firstName]" placeholder="First Name" minlength="1" required /><br />
 
-                                <label for="lastName" class="formlabel">First Name:</label>
+                                <label for="lastName" class="formlabel">Last Name:</label>
                                 <input id="lastName" type="text" name="mv[lastName]" placeholder="Last Name" minlength="1" required /><br />
 
-                                <label for="memberId" class="formlabel">Last Name:</label>
+                                <label for="memberId" class="formlabel">Member ID:</label>
                                 <input id="memberId" type="text" name="mv[memberId]" placeholder="Member ID" minlength="1" required /><br />
 
                                 <label for="email" class="formlabel">Email Address:</label>
