Updated button copy

--- a/views/index.erb
+++ b/views/index.erb
@@ -118,7 +118,7 @@
                                 <input id="email" type="text" name="mv[email]" placeholder="Email" type="email" required /><br />
                             </div>
                             <div id="form-buttons">
-                                <button type="submit" class="formbutton" name="submit">Show Me The Money</button>
+                                <button type="submit" class="formbutton" name="submit">See My Offer!</button>
                             </div>
                         </fieldset>
                     </form>
