--- a/views/offer.erb
+++ b/views/offer.erb
@@ -102,7 +102,7 @@
                     <p class="lead"><%= @offer["offers"][0]["creative"]["en-US"]["description"] %> <a href="https://storefront-staging.lxc.points.com/dodemo/en-US/buy?referralCode=<%= @referralCode %>" >Click here</a> to continue to purchase your offer.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="<%= @offer["offers"][0]["creative"]["en-US"]["finePrint"] %>" alt="">
+                    <img class="img-responsive" src="https://iambmac.files.wordpress.com/2012/04/plane_flying.jpg" alt="">
                 </div>
             </div>
 
