Updated deps to use HTTPs

--- a/views/index.erb
+++ b/views/index.erb
@@ -24,7 +24,7 @@
 
     <!-- Form Validation -->
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="http://cdn.jsdelivr.net/jquery.validation/1.14.0/jquery.validate.min.js"></script>
+    <script src="//cdn.jsdelivr.net/jquery.validation/1.14.0/jquery.validate.min.js"></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
