Updated form to no longer require values and fixed session bug

--- a/views/index.erb
+++ b/views/index.erb
@@ -106,16 +106,16 @@
                         <fieldset>
                             <div id="form-fields">
                                 <label for="firstName" class="formlabel">First Name:</label>
-                                <input id="firstName" type="text" name="mv[firstName]" placeholder="First Name" minlength="1" required /><br />
+                                <input id="firstName" type="text" name="mv[firstName]" placeholder="First Name" minlength="1" /><br />
 
                                 <label for="lastName" class="formlabel">Last Name:</label>
-                                <input id="lastName" type="text" name="mv[lastName]" placeholder="Last Name" minlength="1" required /><br />
+                                <input id="lastName" type="text" name="mv[lastName]" placeholder="Last Name" minlength="1" /><br />
 
                                 <label for="memberId" class="formlabel">Member ID:</label>
-                                <input id="memberId" type="text" name="mv[memberId]" placeholder="Member ID" minlength="1" required /><br />
+                                <input id="memberId" type="text" name="mv[memberId]" placeholder="Member ID" minlength="1" /><br />
 
                                 <label for="email" class="formlabel">Email Address:</label>
-                                <input id="email" type="text" name="mv[email]" placeholder="Email" type="email" required /><br />
+                                <input id="email" type="text" name="mv[email]" placeholder="Email" type="email" /><br />
                             </div>
                             <div id="form-buttons">
                                 <button type="submit" class="formbutton" name="submit">See My Offer!</button>
