--- a/views/offer.erb
+++ b/views/offer.erb
@@ -98,8 +98,27 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading"><%= @offer["offers"][0]["creative"]["en-US"]["name"] %></h2>
-                    <p class="lead"><%= @offer["offers"][0]["creative"]["en-US"]["description"] %> <a href="https://storefront-staging.lxc.points.com/dodemo/en-US/buy?referralCode=<%= @referralCode %>" >Click here</a> to continue to purchase your offer.</p>
+                    <h2 class="section-heading">
+                        <%
+                            unless(@offer["offers"][0]["creative"]["en-US"]["name"].nil?) {
+                                concat "Nothing for you" 
+                            } else {
+                                concat @offer["offers"][0]["creative"]["en-US"]["name"] 
+                            }
+                        %>
+                    </h2>
+                    <p class="lead">
+                        <%
+                            
+                            unless(@offer["offers"][0]["creative"]["en-US"]["description"].nil?) {
+                                concat "Sorry. We've got no offer for you at this time." 
+                            } else {
+                                concat @offer["offers"][0]["creative"]["en-US"]["description"]  
+                            }
+                        %>
+
+                        %> 
+                    <a href="https://storefront-staging.lxc.points.com/dodemo/en-US/buy?referralCode=<%= @referralCode %>" >Click here</a> to continue to purchase points.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="https://iambmac.files.wordpress.com/2012/04/plane_flying.jpg" alt="">
