--- a/views/offer.erb
+++ b/views/offer.erb
@@ -99,14 +99,14 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">
-                        <% unless(@offer["offers"][0]["creative"]["en-US"]["name"].nil?) %>
+                        <% unless(@offer.nil?) %>
                             Oops! No offer found.
                         <% else %>
                             <%=@offer["offers"][0]["creative"]["en-US"]["name"] %>
                         <% end %>
                     </h2>
                     <p class="lead">
-                        <% unless(@offer["offers"][0]["creative"]["en-US"]["name"].nil?) %>
+                        <% unless(@offer.nil?) %>
                             Sorry. We've got no offer for you at this time. 
                         <% else %>
                             <%=@offer["offers"][0]["creative"]["en-US"]["name"] %>
