bug fixes + new images

--- a/views/index.erb
+++ b/views/index.erb
@@ -75,8 +75,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Work hard. Play harder.</h1>
-                        <h3>We've got a special offer just for you to help you do just that.</h3>
+                        <h1>Global Rewards Airlines.</h1>
+                        <h3>The wind beneath my wings.</h3>
                     </div>
                 </div>
             </div>
@@ -106,13 +106,13 @@
                         <fieldset>
                             <div id="form-fields">
                                 <label for="firstName" class="formlabel">First Name:</label>
-                                <input id="firstName" type="text" name="mv[firstName]" placeholder="First Name" minlength="1" /><br />
+                                <input id="firstName" type="text" name="mv[firstName]" placeholder="First Name"  /><br />
 
                                 <label for="lastName" class="formlabel">Last Name:</label>
-                                <input id="lastName" type="text" name="mv[lastName]" placeholder="Last Name" minlength="1" /><br />
+                                <input id="lastName" type="text" name="mv[lastName]" placeholder="Last Name" /><br />
 
                                 <label for="memberId" class="formlabel">Member ID:</label>
-                                <input id="memberId" type="text" name="mv[memberId]" placeholder="Member ID" minlength="1" /><br />
+                                <input id="memberId" type="text" name="mv[memberId]" placeholder="Member ID"  /><br />
 
                                 <label for="email" class="formlabel">Email Address:</label>
                                 <input id="email" type="text" name="mv[email]" placeholder="Email" type="email" /><br />
@@ -129,7 +129,7 @@
 
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="https://iambmac.files.wordpress.com/2012/04/plane_flying.jpg" alt="">
+                    <img class="img-responsive" src="https://imagesus-ssl.homeaway.com/mda01/d01f7843-8994-4504-bd2f-35a893085b15.1.10" alt="">
                 </div>
             </div>
 
