--- a/views/offer.erb
+++ b/views/offer.erb
@@ -76,8 +76,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>Work hard. Play harder.</h1>
-                        <h3>We've got a special offer just for you to help you do just that.</h3>
+                        <h1>Global Airlines.</h1>
+                        <h3>The wind beneath my wings.</h3>
                     </div>
                 </div>
             </div>
@@ -107,14 +107,14 @@
                     </h2>
                     <p class="lead">
                         <% unless(@offer.nil?) %>
-                             <%=@offer["offers"][0]["creative"]["en-US"]["name"] %>
+                             <%=@offer["offers"][0]["creative"]["en-US"]["description"] %>
                         <% else %>
                             Sorry. We've got no offer for you at this time.
                         <% end %>
                     <a href="https://storefront-staging.lxc.points.com/dodemo/en-US/buy?referralCode=<%= @referralCode %>" >Click here</a> to continue to purchase points.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="https://iambmac.files.wordpress.com/2012/04/plane_flying.jpg" alt="">
+                    <img class="img-responsive" src="https://imagesus-ssl.homeaway.com/mda01/d01f7843-8994-4504-bd2f-35a893085b15.1.10" alt="">
                 </div>
             </div>
 
